Mon Jan  2 14:12:15 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/tao_idl.cpp:
        * TAO_IDL/driver/drv_args.cpp:
        * TAO_IDL/driver/drv_preproc.cpp:
        * TAO_IDL/include/drv_extern.h:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/util/utl_global.cpp:
        
          - Frontend changes necessary to support a backend option
            for the CoSMIC IDL importer that passes a directory
            name instead of a list of IDL files. This option is
            not available for any other backends and should not
            affect their behavior.
            
          - Added a patch submitted by Ken Sedgwick <ken+5a4@bonsai,com>
            that fixes a bug in the functioning of TAO_IDL_INCLUDE_DIR. 

Sun Jan  1 10:50:39 2006  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp (is_alive):
	  Fixed a couple of bugs reported by Yariv Tal
 	  <yariv_tal2003@hotmail.com>.  This fixes bugid 2347.

Fri Dec 30 15:36:04 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* examples/Event_Comm/Makefile.am:
	* examples/Kokyu_dsrt_schedulers/fp_example/Makefile.am:
	* examples/Kokyu_dsrt_schedulers/mif_example/Makefile.am:
	* examples/Kokyu_dsrt_schedulers/muf_example/Makefile.am:
	* examples/Logging/Makefile.am:

	  Regenerated.

	* examples/Event_Comm/Event_Comm.mpc:
	* examples/Kokyu_dsrt_schedulers/fp_example/fp_example.mpc:
	* examples/Kokyu_dsrt_schedulers/mif_example/mif_example.mpc:
	* examples/Kokyu_dsrt_schedulers/muf_example/muf_example.mpc:
	* examples/Logging/Logging.mpc:

          Add *_IDL projects for compiling *.idl files.  This eliminates
          duplicate rules that would otherwise result when Makefile.am's
          are aggregated in the automake build.

Fri Dec 30 16:15:24 2005  Wallace Zhang  <zhangw@ociweb.com>

        * NEWS: Updated information for the wchar refactoring work.

Wed Dec 30 14:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
