@@ -84,10 +84,17 @@ TAO_InterfaceAttrExtension_i::describe_ext_interface_i (
   CORBA::ULong j = 0;
   ACE_Unbounded_Queue<ACE_Configuration_Section_Key> key_queue;
 
+  // Store our section key for later restoration after we have
+  // traversed entries for inherited interfaces.
+  ACE_Configuration_Section_Key key_holder = this->section_key_;
+
   // Operations
   TAO_InterfaceDef_i iface (this->repo_);
   iface.section_key (this->section_key_);
   iface.inherited_operations (key_queue);
+
+  // Restore our original section key.
+  this->section_key (key_holder);
 
   ACE_Configuration_Section_Key ops_key, op_key;
   int status =
@@ -138,6 +145,9 @@ TAO_InterfaceAttrExtension_i::describe_ext_interface_i (
 
   // Attributes.
   iface.inherited_attributes (key_queue);
+
+  // Restore our original section key.
+  this->section_key (key_holder);
 
   ACE_Configuration_Section_Key attrs_key;
   status =
